--- a/src/app/photograph/add-photograph/add-photograph.component.html
+++ b/src/app/photograph/add-photograph/add-photograph.component.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-
+      <!-- 
       <div class="col-md-12 mb-3">
         <h4 class="header-title">File Type *</h4>
 
@@ -69,7 +69,7 @@
         <div *ngIf="submited && f.FileType.errors" class="invalid-feedback">
           <div *ngIf="f.FileType.errors.required">File Type is Required</div>
         </div>
-      </div>
+      </div> -->
 
       <div class="col-md-12 mb-3">
         <h4 class="header-title">File Description *</h4>
