--- a/src/app/property/single-property-view/single-property-view.component.html
+++ b/src/app/property/single-property-view/single-property-view.component.html
@@ -16,7 +16,7 @@
           ></app-view-property>
         </ng-template>
       </ngb-tab>
-      <ngb-tab title="Alert / Remainder" class="nav-item" id="alert">
+      <ngb-tab title="Alert / Reminder" class="nav-item" id="alert">
         <ng-template ngbTabContent
           ><app-alert PropertyId="{{ propertyID }}"></app-alert>
         </ng-template>
