--- a/src/app/property/view-property/view-property.component.html
+++ b/src/app/property/view-property/view-property.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <br />
-    <div *ngIf="data.PostalAddress">
+    <div class="mb-3" *ngIf="data.PostalAddress">
       <ng-container>
         <div class="border-bottom">
           <h5 class="text-info">Location</h5>
@@ -44,7 +44,7 @@
       <br />
     </div>
 
-    <div *ngIf="data.Description">
+    <div class="mb-3" *ngIf="data.Description">
       <ng-container>
         <div class="border-bottom">
           <h5 class="text-info">Description</h5>
@@ -54,7 +54,7 @@
       <br />
     </div>
 
-    <div *ngIf="propertyType">
+    <div class="mb-3" *ngIf="propertyType">
       <ng-container>
         <div class="border-bottom">
           <h5 class="text-info">Other Details</h5>
