--- a/src/app/tax/add-tax/add-tax.component.html
+++ b/src/app/tax/add-tax/add-tax.component.html
@@ -133,7 +133,7 @@
           listVisible="true"
           zoomText="zoomOut"
           (ngModelChange)="onchange($event)"
-          accept="image/gif,image/png,image/jpeg,application/pdf,application/msword,.doc,.docx"
+          accept="image/gif,image/png,image/jpeg,application/pdf"
           type="file"
           maxsize="20mb"
           [ngClass]="{
@@ -173,7 +173,7 @@
         </div>
       </div>
     </div>
-    <div class="">
+    <!-- <div class="">
       <div class="mb-3">
         <h4 class="header-title">File Type *</h4>
 
@@ -197,7 +197,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="">
       <div class="mb-3">
         <h4 class="header-title">File Description *</h4>
