--- a/src/app/treasurer/alert/alert.component.html
+++ b/src/app/treasurer/alert/alert.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="col-md-12 table-responsive py-3" *ngIf="!isLoading">
     <app-portlet
-      title="Tax Remainder"
+      title="Tax Reminder"
       headerClass="h5 header-title"
       collapsed="0"
       loading="0"
@@ -71,7 +71,7 @@
     </app-portlet>
     <!-- rent start -->
     <app-portlet
-      title="Rent Remainder"
+      title="Rent Reminder"
       headerClass="h5 header-title"
       collapsed="0"
       loading="0"
