--- a/src/app/shared/upload-receipt/upload-receipt.component.html
+++ b/src/app/shared/upload-receipt/upload-receipt.component.html
@@ -13,7 +13,7 @@
               isAnimationDisabled="true"
               listVisible="true"
               zoomText="zoomOut"
-              accept="image/gif,image/png,image/jpeg,application/pdf,application/msword,.doc,.docx"
+              accept="image/gif,image/png,image/jpeg,application/pdf"
               type="file"
               maxsize="20mb"
               (ngModelChange)="onchange($event)"
@@ -56,7 +56,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-12 mb-3">
             <h4 class="header-title">File Type *</h4>
 
@@ -80,7 +80,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="row">
           <div class="col-md-12 mb-3">
             <h4 class="header-title">File Description *</h4>
@@ -114,7 +114,8 @@
               placeholder="Enter Payment Date"
               formControlName="PaymentDate"
               type="date"
-              (keypress)="callback()"
+              (keydown)="callback()"
+              max="{{ today | date: 'yyyy-MM-dd' }}"
               [ngClass]="{
                 'is-invalid': submited && f.PaymentDate.errors
               }"
@@ -136,8 +137,9 @@
               class="form-control"
               placeholder="Enter DueDate"
               formControlName="NextDueDate"
+              min="{{ today | date: 'yyyy-MM-dd' }}"
               type="date"
-              (keypress)="callback()"
+              (keydown)="callback()"
               [ngClass]="{
                 'is-invalid': submited && f.NextDueDate.errors
               }"
@@ -158,7 +160,8 @@
             !isLoading &&
             !taxId &&
             rentId &&
-            rentData.RemainingAdvanceAmount != 0 && rentData.RemainingAdvanceAmount
+            rentData.RemainingAdvanceAmount != 0 &&
+            rentData.RemainingAdvanceAmount
           "
         >
           <div class="col-md-12 mb-3">
@@ -215,7 +218,7 @@
               class="invalid-feedback"
             >
               <div *ngIf="f.ModeOfPayment.errors.required">
-                Payment Mode is required
+                Payment Mode is Required
               </div>
             </div>
           </div>
@@ -237,6 +240,9 @@
             <div *ngIf="submited && f.ChequeNo.errors" class="invalid-feedback">
               <div *ngIf="f.ChequeNo.errors.required">
                 Cheque No is Required
+              </div>
+              <div *ngIf="f.ChequeNo.errors.pattern">
+                Only Alphanumeric Characters Allowed
               </div>
             </div>
           </div>
@@ -261,6 +267,9 @@
             >
               <div *ngIf="f.WalletName.errors.required">
                 Wallet Name is Required
+              </div>
+              <div *ngIf="f.WalletName.errors.pattern">
+                Only Alphanumeric Characters Allowed
               </div>
             </div>
           </div>
@@ -287,6 +296,9 @@
               <div *ngIf="f.BankName.errors.required">
                 Bank Name is Required
               </div>
+              <div *ngIf="f.BankName.errors.pattern">
+                Only Alphanumeric Characters Allowed
+              </div>
             </div>
           </div>
           <div
@@ -311,6 +323,9 @@
               <div *ngIf="f.BankBranchName.errors.required">
                 Branch Name is Required
               </div>
+              <div *ngIf="f.BankBranchName.errors.pattern">
+                Only Alphanumeric Characters Allowed
+              </div>
             </div>
           </div>
           <div
@@ -334,6 +349,9 @@
             >
               <div *ngIf="f.ChequeName.errors.required">
                 Cheque Name is Required
+              </div>
+              <div *ngIf="f.ChequeName.errors.pattern">
+                Only Alphanumeric Characters Allowed
               </div>
             </div>
           </div>
@@ -362,17 +380,21 @@
               <div *ngIf="f.TransactionID.errors.required">
                 Transaction ID is Required
               </div>
+              <div *ngIf="f.TransactionID.errors.pattern">
+                Only Alphanumeric Characters Allowed
+              </div>
             </div>
           </div>
           <div class="col-md-12 mb-3">
             <h4 class="header-title">Amount *</h4>
             <input
-              type="number"
               class="form-control"
               id="example-input"
               placeholder="Enter Amount"
               formControlName="AmountPay"
               maxlength="225"
+              (keypress)="numeric($event)"
+              (keydown)="numeric($event)"
               [ngClass]="{
                 'is-invalid': submited && f.AmountPay.errors
               }"
@@ -382,6 +404,7 @@
               class="invalid-feedback"
             >
               <div *ngIf="f.AmountPay.errors.required">Amount is Required</div>
+              <div *ngIf="f.AmountPay.errors.min">Amount Should be Valid</div>
             </div>
           </div>
         </div>
@@ -389,7 +412,6 @@
     </div>
 
     <div class="row">
-      <div class="col-md-4"></div>
       <div class="col-md-4 mb-3">
         <button
           class="btn btn-primary waves-effect waves-light btn-block"
