--- a/src/app/property/single-property-view/single-property-view.component.html
+++ b/src/app/property/single-property-view/single-property-view.component.html
@@ -67,11 +67,11 @@
           </div>
         </ng-template>
       </ngb-tab>
-      <ngb-tab title="Maintenance" class="nav-item">
+      <!-- <ngb-tab title="Maintenance" class="nav-item">
         <ng-template ngbTabContent
           ><app-coming-soon></app-coming-soon>
         </ng-template>
-      </ngb-tab>
+      </ngb-tab> -->
       <ngb-tab title="Legal Case" class="nav-item">
         <ng-template ngbTabContent>
           <div class="row">
@@ -86,11 +86,11 @@
           </div>
         </ng-template>
       </ngb-tab>
-      <ngb-tab title="Trust" class="nav-item">
+      <!-- <ngb-tab title="Trust" class="nav-item">
         <ng-template ngbTabContent
           ><app-coming-soon></app-coming-soon>
         </ng-template>
-      </ngb-tab>
+      </ngb-tab> -->
     </ngb-tabset>
   </div>
   <div class="card-disabled" *ngIf="isloading">
