--- a/src/app/shared/custom-partlet/custom-partlet.component.html
+++ b/src/app/shared/custom-partlet/custom-partlet.component.html
@@ -43,9 +43,12 @@
       <span class="text-muted">Next Hearing</span> :
       <span class="text-danger">{{ hearingDate }}</span>
     </p>
-    <p *ngIf="status == 2 && hearingDate">
+    <p *ngIf="status == 2 && decisionDate">
       <span class="text-muted">Case Disposed On </span> :
-      <span class="text-success">{{ hearingDate }}</span>
+      <span class="text-success">{{ decisionDate }}</span>
+    </p>
+    <p *ngIf="status == 2 && FileURL">
+      <a class="text-success" href="{{ FileURL }}">Download Order Document</a>
     </p>
   </div>
   <hr />
