--- a/src/app/treasurer/dashboard/dashboard.component.html
+++ b/src/app/treasurer/dashboard/dashboard.component.html
@@ -114,7 +114,7 @@
                 + Add New <i class="mdi mdi-chevron-down"></i>
               </button>
               <div class="dropdown-menu" [ngClass]="{ show: isdropdownShow }">
-                <a class="dropdown-item" href="Task">Task</a>
+                <!-- <a class="dropdown-item" href="Task">Task</a>
                 <a class="dropdown-item" href="Maintenance">Maintenance</a>
                 <a class="dropdown-item" [routerLink]="['/rent/create']"
                   >Tenant</a
@@ -131,17 +131,17 @@
                   class="dropdown-item"
                   [routerLink]="['/property-document/upload']"
                   >Document</a
-                >
+                > -->
                 <a class="dropdown-item" [routerLink]="['/property/create']"
                   >Property</a
                 >
-                <a class="dropdown-item" href="Office">Office</a>
+                <!-- <a class="dropdown-item" href="Office">Office</a>
                 <a
                   class="dropdown-item"
                   href="#"
                   [routerLink]="['/lawyer/create']"
                   >Lawyer</a
-                >
+                > -->
               </div>
             </div>
             <!-- end col-->
