--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -43,6 +43,14 @@
               >Properties</a
             >
           </li>
+          <li>
+            <a
+              routerLink="/AICC/trust"
+              routerLinkActive="active"
+              class="side-nav-link-ref"
+              >Trust</a
+            >
+          </li>
           <!-- <li>
             <a
               routerLink="/dashboards/dashboard-3"
@@ -83,14 +91,7 @@
               >Maintenance</a
             >
           </li>
-          <li>
-            <a
-              routerLink="/Trust"
-              routerLinkActive="active"
-              class="side-nav-link-ref"
-              >Trust</a
-            >
-          </li>
+
           <li>
             <a
               routerLink="/Documents"
